# ez_term

./: .gitignore  Cargo.toml  README.md  Roadmap.md  build.rs
Examples/: box_layouts.ez  dummy.txt  example_art.txt  float_layout_pos_hints.ez  full_example.ez  full_example.rs  simple_example.ez
Examples/BoxLayouts/: box_layouts.ez
Examples/FullExample/: example_art.txt  full_example.ez  full_example.rs  generic_templates.ez  tabs_showcase.ez
examples/: box_layouts.rs  button.rs  canvas.rs  canvas_example.rs  checkbox.rs  dropdown.rs  dropdown_example.rs  float_layout_pos_hints.rs  full_example.rs  generic_example.rs  progress_bar.rs  progress_bar_example.rs  radio_button.rs  radio_button_example.rs  scheduler_create_widgets_programmatically.rs  scheduler_hover_exit_callback.rs  scheduler_modal_popup.rs  scheduler_schedule_once.rs  scheduler_schedule_once_from_callback.rs  scheduler_schedule_recurring.rs  scheduler_schedule_recurring_from_callback.rs  scheduler_schedule_threaded_custom_property.rs  scheduler_schedule_threaded_state_tree.rs  screen_layout.rs  screen_layout_example.rs  slider.rs  slider_example.rs  stack_layout.rs  stack_layout_example.rs  text_input.rs  text_input_example.rs  views.rs
examples/BoxLayouts/: box_layouts.ez
examples/FloatLayout/: float_layout_pos_hints.ez
examples/FullExample/: buttons_showcase.ez  dropdown_showcase.ez  dummy.txt  full_example.ez  (+3 more)
src/: common.rs  ez_parser.rs  lib.rs  parser.rs  property.rs  run.rs  scheduler.rs
ui/: buttons_showcase.ez  full_example.ez  input_showcase.ez  popup_showcase.ez  tabs_showcase.ez
(+105 files in other folders)
