[package]
name = "ez_term"
version = "0.1.0"
edition = "2021"

[lib]
name = "ez_term"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "Examples/full_example.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
unicode-segmentation = "1.9.0"