[package]
name = "ez_term"
version = "0.1.0"
rust-version = "1.61.0"
edition = "2021"

[lib]
name = "ez_term"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "Examples/FullExample/full_example.rs"

[[bin]]
name = "example_float"
path = "Examples/FloatLayout/float_layout_pos_hints.rs"

[[bin]]
name = "example_box"
path = "Examples/BoxLayouts/box_layouts.rs"

[dependencies]
crossterm = "0.23.2"
unicode-segmentation = "1.9.0"