[package]
name = "ez_term"
version = "0.1.1"
rust-version = "1.61.0"
edition = "2021"
authors = ["ddbnl <daandeboer@gmail.com>"]
description = "A cross-platform terminal UI framework focussed on simplicity. Build your TUI using YAML(ish) config files."
documentation = "https://github.com/ddbnl/ez_term/wiki"
readme = true
homepage = "https://github.com/ddbnl/ez_term"
repository = "https://github.com/ddbnl/ez_term"
license = "GPL-3.0-or-later"
keywords = ["tui", "terminal", "terminal-ui"]
categories = ["command-line-interface", "gui"]

[lib]
name = "ez_term"
path = "src/lib.rs"

[dependencies]
crossterm = "0.24.0"
unicode-segmentation = "1.9.0"
rustc-hash = "1.1.0"
meval = "0.2.0"